tester/src/test/aya/failure/patterns/issue354-reduce.aya.txt
In file $FILE:15:4 ->

  13 |  | neg Nat { | n => pos (addN n n) }
  14 | 
  15 | def abs (n : Int) : Nat
           ^-^
  
Error: The 3rd clause matches on a constructor with condition(s). When checking the 1st condition, we failed to even reduce one of the clause(s) to check condition
Tycking interrupted due to errors.
What are you doing?
